Created xbob.db.base package, with stripped-out API

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,8 @@ develop = .
 extensions = mr.developer
 auto-checkout = *
 prefixes = /Users/andre/work/bob/b/dbg
+verbose = true
+debug = true
 
 [sources]
 xbob.buildout = git git@github.com:bioidiap/xbob.buildout
