Remove last legacy bits, package now builds find

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,8 +3,8 @@
 ; Mon 16 Apr 08:29:18 2012 CEST
 
 [buildout]
-parts = scripts
-eggs = xbob.db
+parts = xbob.blitz xbob.io scripts
+eggs = xbob.db.base
        ipdb
 develop = .
 extensions = mr.developer
@@ -15,6 +15,19 @@ debug = true
 
 [sources]
 xbob.buildout = git git@github.com:bioidiap/xbob.buildout
+xbob.extension = git git@github.com:bioidiap/xbob.extension branch=xbob
+xbob.blitz = git git@github.com:anjos/xbob.blitz egg=false
+xbob.io = git git@github.com:anjos/xbob.io egg=false
+
+[xbob.blitz]
+recipe = xbob.buildout:develop
+setup = src/xbob.blitz
+eggs = xbob.extension
+
+[xbob.io]
+recipe = xbob.buildout:develop
+setup = src/xbob.io
+eggs = xbob.blitz
 
 [scripts]
 recipe = xbob.buildout:scripts
