--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,37 @@
-# After changing this file, run it through http://lint.travis-ci.org/
-# Generates 4 builds, the ones for python3 will install external wheels
 language: python
-python:
-  - 2.6
-  - 2.7
 matrix:
   include:
-    - python: 3.2
-      env:
-        - NUMPYSPEC===1.7.1
-    - python: 3.3
-      env:
-        - NUMPYSPEC===1.8.0
+  - python: 2.6
+  - python: 2.7
+    env:
+    - secure: F3a3XTtOu6FYrCVPjV+86xT78VHDxP56ZOV4lq+zeRDNjNxXsl6R6/ZagWnoHXyR+P54tFzsNSoj250R+TafUZvClSKS6d8VYCsb79PBl2NB4cwiv3R/tlhLwx+x+TEVwHj7vuk6aCozb8+XjmfiqQWpGPvny2u9V3BAGFnywlI=
+    - secure: OvT4/SZCk8JvC4VLOuGCkljHkhvDRLhwgj2CtguNsYeOiUNwrijdxZw7NG/aa1lKYKEPgYcCMbdW7ymrMHyiN3S0KNZNBRZJNOkCCnU2JbIvpd8bH4F/ezh3+qPz15igZHLf2B2WIo0bu/PqJt62I4XFFMMup8rnUBeM5GxZ5UE=
+  - python: 3.2
+    env:
+    - NUMPYSPEC===1.7.1
+  - python: 3.3
+    env:
+    - NUMPYSPEC===1.8.0
 before_install:
-  - sudo add-apt-repository -y ppa:biometrics/bob
-  - sudo add-apt-repository -y ppa:biometrics/bob.preview
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq --force-yes bob-dev
-  - if [ -n "${NUMPYSPEC}" ]; then sudo apt-get install -qq libatlas-dev libatlas-base-dev liblapack-dev gfortran; fi
-  - if [ -n "${NUMPYSPEC}" ]; then pip install --upgrade pip setuptools; fi
-  - if [ -n "${NUMPYSPEC}" ]; then pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --use-wheel numpy$NUMPYSPEC sphinx nose; fi
-  - pip install coveralls
+- sudo add-apt-repository -y ppa:biometrics/bob
+- sudo add-apt-repository -y ppa:biometrics/bob.preview
+- sudo apt-get update -qq
+- sudo apt-get install -qq --force-yes bob-dev
+- if [ -n "${NUMPYSPEC}" ]; then sudo apt-get install -qq libatlas-dev libatlas-base-dev
+  liblapack-dev gfortran; fi
+- if [ -n "${NUMPYSPEC}" ]; then pip install --upgrade pip setuptools; fi
+- if [ -n "${NUMPYSPEC}" ]; then pip install --find-links http://wheels.astropy.org/
+  --find-links http://wheels2.astropy.org/ --use-wheel numpy$NUMPYSPEC sphinx nose;
+  fi
+- pip install coveralls
 install:
-  - "python bootstrap.py"
-  - "./bin/buildout"
+- python bootstrap.py
+- ./bin/buildout
 script:
-  - "./bin/python -c 'from bob.db.base import get_config; print(get_config())'"
-  - "./bin/coverage run --source=bob.db.base ./bin/nosetests -sv"
-  - "./bin/sphinx-build -b doctest doc sphinx"
-  - "./bin/sphinx-build -b html doc sphinx"
+- ./bin/python -c 'from bob.db.base import get_config; print(get_config())'
+- ./bin/coverage run --source=bob.db.base ./bin/nosetests -sv
+- ./bin/sphinx-build -b doctest doc sphinx
+- ./bin/sphinx-build -b html doc sphinx
 after_success:
-  - "coveralls"
+- coveralls
+- ./src/bob.extension/scripts/upload-sphinx.sh
