--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ matrix:
     env:
     - secure: F3a3XTtOu6FYrCVPjV+86xT78VHDxP56ZOV4lq+zeRDNjNxXsl6R6/ZagWnoHXyR+P54tFzsNSoj250R+TafUZvClSKS6d8VYCsb79PBl2NB4cwiv3R/tlhLwx+x+TEVwHj7vuk6aCozb8+XjmfiqQWpGPvny2u9V3BAGFnywlI=
     - secure: OvT4/SZCk8JvC4VLOuGCkljHkhvDRLhwgj2CtguNsYeOiUNwrijdxZw7NG/aa1lKYKEPgYcCMbdW7ymrMHyiN3S0KNZNBRZJNOkCCnU2JbIvpd8bH4F/ezh3+qPz15igZHLf2B2WIo0bu/PqJt62I4XFFMMup8rnUBeM5GxZ5UE=
+    - BOB_DOCUMENTATION_SERVER=https://www.idiap.ch/software/bob/docs/latest/bioidiap/%s/master
   - python: 3.2
     env:
     - NUMPYSPEC===1.7.1
@@ -15,7 +16,7 @@ matrix:
 before_install:
 - sudo add-apt-repository -y ppa:biometrics/bob
 - sudo apt-get update -qq
-- sudo apt-get install -qq --force-yes libboost-all-dev libblitz1-dev libhdf5-serial-dev
+- sudo apt-get install -qq --force-yes libboost-all-dev libblitz1-dev libhdf5-serial-dev texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
 - if [ -n "${NUMPYSPEC}" ]; then sudo apt-get install -qq libatlas-dev libatlas-base-dev liblapack-dev gfortran; fi
 - if [ -n "${NUMPYSPEC}" ]; then pip install --upgrade pip setuptools; fi
 - if [ -n "${NUMPYSPEC}" ]; then pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --use-wheel numpy$NUMPYSPEC; fi
