--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,16 @@ matrix:
   - python: 2.7
     env:
     - BOB_DOCUMENTATION_SERVER=https://www.idiap.ch/software/bob/docs/latest/bioidiap/%s/master
-    - BOB_UPLOAD_WHEEL=1
+    - BOB_UPLOAD_WHEEL="--python-tag py2"
   - python: 3.3
+    env:
+    - BOB_UPLOAD_WHEEL="--python-tag py3"
   - python: 3.4
 before_install:
 - sudo add-apt-repository -y ppa:biometrics/bob
 - sudo apt-get update -qq
 - sudo apt-get install -qq --force-yes libboost-all-dev libblitz1-dev libhdf5-serial-dev texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
-- pip install --find-links https://www.idiap.ch/software/bob/wheels/travis/ --use-wheel sphinx nose jinja2 coverage cpp-coveralls pygments
+- pip install --find-links https://www.idiap.ch/software/bob/wheels/travis/ --use-wheel sphinx nose coverage cpp-coveralls
 - pip install --find-links https://www.idiap.ch/software/bob/wheels/travis/ --use-wheel -r requirements.txt
 install:
 - python bootstrap-buildout.py
