--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include LICENSE README.rst bootstrap-buildout.py buildout.cfg version.txt requirements.txt
+include LICENSE README.rst bootstrap-buildout.py buildout.cfg develop.cfg version.txt requirements.txt
 recursive-include doc conf.py *.rst
