--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include LICENSE README.rst bootstrap-buildout.py buildout.cfg develop.cfg version.txt requirements.txt
+include LICENSE README.rst buildout.cfg develop.cfg version.txt requirements.txt
 recursive-include doc conf.py *.rst
 recursive-include bob/db/base/data *.sql3 *.pos
