--- a/develop.cfg
+++ b/develop.cfg
@@ -12,6 +12,7 @@ develop = src/bob.extension
           src/bob.blitz
           src/bob.core
           src/bob.io.base
+          src/bob.io.image
           .
 
 ; options for bob.buildout extension
@@ -24,6 +25,7 @@ bob.extension = git https://gitlab.idiap.ch/bob/bob.extension
 bob.blitz = git https://gitlab.idiap.ch/bob/bob.blitz
 bob.core = git https://gitlab.idiap.ch/bob/bob.core
 bob.io.base = git https://gitlab.idiap.ch/bob/bob.io.base
+bob.io.image = git https://gitlab.idiap.ch/bob/bob.io.image
 
 [scripts]
 recipe = bob.buildout:scripts
